# RH16

./: .gitignore  LICENSE  README.md
cpp/: COMMANDS.md  canset.sh  ros2build.sh
cpp/rh16_cmd/: CMakeLists.txt  package.xml
cpp/rh16_cmd/msg/: Rh16Cmd.msg
cpp/rh16_cmd/srv/: Rh16fk.srv  Rh16ik.srv
cpp/rh16_ctrl/: CMakeLists.txt  package.xml
cpp/rh16_ctrl/include/: rh16_ctrl.hpp  rh16_test.hpp  ryhandlib_port.h
cpp/rh16_ctrl/launch/: BothHands.launch.py
cpp/rh16_ctrl/lib/: ryhandlib.h
cpp/rh16_ctrl/src/: rh16_ctrl.cpp  rh16_kinematics.cpp  rh16_test.cpp  ryhand_callbacks.c  ryhandlib_port.c
cpp/rh16_ctrl/urdf/: rh1621hand_y.urdf  rh1621hand_z.urdf
cpp/rh16_msg/: CMakeLists.txt  package.xml
cpp/rh16_msg/msg/: Rh16Msg.msg
py/: COMMANDS.md  MOTOR_CONTROL_FIXES.md  QUICK_START.md  build_all.sh  rebuild.sh
py/rh16_cmd_py/: CMakeLists.txt  package.xml
py/rh16_cmd_py/msg/: Rh16Cmd.msg
py/rh16_ctrl_py/: package.xml  setup.cfg  setup.py
py/rh16_ctrl_py/config/: rh16_params.yaml
py/rh16_ctrl_py/launch/: dual_hand_control.launch.py  dual_hand_manual_can.launch.py  rh16_full.launch.py  rh16_test.launch.py
py/rh16_ctrl_py/rh16_ctrl_py/: __init__.py  rh16_can_node.py  rh16_ctrl_node.py  rh16_kinematics_node.py  rh16_test_cpp_aligned.py  utils.py
py/rh16_ctrl_py/rh16_ctrl_py/pinocchio_local/: __init__.py  algorithms.py  core.py  model.py  spatial.py
py/rh16_ctrl_py/scripts/: sine_motion_control.py
py/rh16_msg_py/: CMakeLists.txt  package.xml
py/rh16_msg_py/msg/: Rh16Msg.msg
py/rh16_msg_py/srv/: Rh16Fk.srv  Rh16Ik.srv
